[package]
name = "jupiter-adrena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jupiter-amm-interface = "0.4.3"
anchor-lang = "0.29.0"
solana-sdk = "=1.18.12"
solana-account-decoder = "=1.18.12"
anyhow = "1.0"
pyth-sdk-solana = "0.10"
num-traits = "0.2.15"
chrono = "0.4.38"
rust_decimal = "1.35.0"
adrena = { git = "ssh://git@github.com/AdrenaDEX/adrena.git" }

[dev-dependencies]
base64 = "0.22"
solana-client = "=1.18.12"
