[package]
name = "jupiter-adrena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jupiter-amm-interface = "0.4.5"
anchor-lang = "0.29.0"
solana-sdk = "=1.18.22"
anyhow = "1.0"
num-traits = "0.2.15"
rust_decimal = "1.35.0"
adrena = { git = "ssh://git@github.com/AdrenaFoundation/adrena.git" }

[dev-dependencies]
base64 = "0.22"
solana-client = "=1.18.22"
