[package]
name = "jupiter-adrena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jupiter-amm-interface = "0.4.5"
anchor-lang = "0.29.0"
solana-sdk = "=1.18.22"
anyhow = "1.0"
num-traits = "0.2"
rust_decimal = "1.36"
adrena = { git = "ssh://git@github.com/AdrenaFoundation/adrena.git", branch = "release/1" }

[dev-dependencies]
base64 = "0.22"
solana-client = "=1.18.22"

[patch.crates-io]
solana-program = { git = "https://github.com/AdrenaFoundation/agave", branch = "v1.18.22-patched" }
solana-sdk = { git = "https://github.com/AdrenaFoundation/agave", branch = "v1.18.22-patched" }
solana-client = { git = "https://github.com/AdrenaFoundation/agave", branch = "v1.18.22-patched" }
anchor-lang = { git = "https://github.com/coral-xyz/anchor", tag = "v0.29.0" }
anchor-attribute-access-control = { git = "https://github.com/coral-xyz/anchor", tag = "v0.29.0" }
anchor-attribute-error = { git = "https://github.com/coral-xyz/anchor", tag = "v0.29.0" }
anchor-attribute-event = { git = "https://github.com/coral-xyz/anchor", tag = "v0.29.0" }
